added css for header and logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="tables.css">
   </head>
   <body>
+    <div class="header group">
+      <a class="logo" href="#">
+        <img src="logo.png"></a>
+      </a>
+    </div>
     <div class="block"> <!-- .block to add some padding -->
       <a href="#" class="btn action">List item</a>
     </div>
